Format Java code